--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
       "warn",
       { "allowConstantExport": true }
     ],
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
     "import/no-unresolved": "off",
     "import/order": [
       "error",
